--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Hong Joon Chew's Website
 description: This website acts like a portfolio for all my repo projects.
+github_username: hongjoonchew
