--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,9 @@ theme: jekyll-theme-cayman
 title: Hong Joon Chew's Website
 description: This website acts like a portfolio for all my repo projects.
 github_username: hongjoonchew
+defaults:
+  scope:
+  path: ""
+  type: "pages"
+  values:
+    layout: "default"
